# manager_web

./: Cargo.toml  index.html
api/: server.py
src/: app.rs  main.rs
src/frames/: auth.rs  firm.rs  mod.rs  point.rs  point_edit.rs  point_reg.rs  profile.rs
src/pages/: mod.rs  not_auth.rs  page.rs  welcome.rs
style/: main.scss
